--- a/Seccion 6/E-Monitor/app/src/main/res/layout/eq_list_item.xml
+++ b/Seccion 6/E-Monitor/app/src/main/res/layout/eq_list_item.xml
@@ -8,12 +8,14 @@
     >
 
     <TextView
+        android:id="@+id/magnitude"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="4.6"
         android:layout_weight="1"/>
 
     <TextView
+        android:id="@+id/place"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
